--- a/Views/SettingPage.xaml
+++ b/Views/SettingPage.xaml
@@ -12,6 +12,7 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -40,6 +41,21 @@
                         <Button  Text="Usuń siłownie" Padding="15"
                         Background="Transparent" VerticalOptions="End"
                         Command="{Binding DeleteGymCommand}"
+                        BorderColor="{DynamicResource PrimaryColor}" BorderWidth="1" TextColor="{DynamicResource PrimaryColor}"/>
+
+                    </VerticalStackLayout>
+                </Border>
+
+                <Border Grid.Row="4" StrokeShape="RoundRectangle 3" StrokeThickness="1" >
+                    <VerticalStackLayout>
+                        <Picker VerticalOptions="End" HorizontalTextAlignment="Center"
+                       Title="Wybierz partię do usunięcia" TextColor="Black"
+                       ItemsSource="{Binding NamePartPicker}"
+                       SelectedItem="{Binding SelectNamePart}" />
+
+                        <Button  Text="Usuń partię" Padding="15"
+                        Background="Transparent" VerticalOptions="End"
+                        Command="{Binding DeletePartCommand}"
                         BorderColor="{DynamicResource PrimaryColor}" BorderWidth="1" TextColor="{DynamicResource PrimaryColor}"/>
                     </VerticalStackLayout>
                 </Border>
