--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -28,7 +28,8 @@ Shell.FlyoutBackdrop="White"
             <ShellContent Title="Statystyka" Route="StatisticPage" ContentTemplate="{DataTemplate local:StatisticPage}" />
         </Tab>-->
         <Tab Title="Plan" Icon="journal">
-            <ShellContent Title="Plan treningowy" Route="RotationPlanPage" ContentTemplate="{DataTemplate views:RotationPlanPage}" />
+            <ShellContent Route="TrainingPlanHostPage" ContentTemplate="{DataTemplate local:TrainingPlanHostPage}" />
+
         </Tab>
         <Tab FlyoutItemIsVisible="False" Title="Statystyka" Icon="graph2" >
             <ShellContent Title="Statystyka ćwiczeń siłowych" Route="StatisticPage" ContentTemplate="{DataTemplate local:StatisticPage}" />
@@ -44,6 +45,7 @@ Shell.FlyoutBackdrop="White"
         ContentTemplate="{DataTemplate local:StatisticCardioPage}" />-->
     </FlyoutItem>
     <ShellContent Title="Cardio" Route="StatisticCardioPage" ContentTemplate="{DataTemplate local:StatisticCardioPage}" />
+    <ShellContent Title="Tygodniowy plan treningowy" Route="TrainingPlanPage" ContentTemplate="{DataTemplate local:TrainingPlanPage}" />
     <ShellContent FlyoutItemIsVisible="True" Title="Dodaj ćwiczenie" Route="AddExercisePage" ContentTemplate="{DataTemplate local:AddExercisePage}" />
     <ShellContent FlyoutItemIsVisible="True" Title="Dodaj plan" Route="AddTrainingPlanPage" ContentTemplate="{DataTemplate local:AddTrainingPlanPage}" />
     <!--<Shell.FlyoutFooter>
