--- a/Views/RotationPlanPage.xaml
+++ b/Views/RotationPlanPage.xaml
@@ -1,19 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WorkoutDiary.Views.RotationPlanPage"
-    xmlns:viewmodels="clr-namespace:WorkoutDiary.ViewModels"
-             Title="Plan treningowy" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundColor="#E5E5E5">
+    xmlns:viewmodels="clr-namespace:WorkoutDiary.ViewModels" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundColor="#E5E5E5">
 
 
+    <Grid RowDefinitions="auto, *">
 
-    <ScrollView>
+        <ScrollView Grid.Row="0">
         <VerticalStackLayout Padding="20" Spacing="20">
-
-
-
             <!-- REKOMENDOWANE PARTIE -->
-            <Label Text="Co ćwiczyć dziś:" 
+            <Label Text="Kolejne sugerowane ćwiczenia:" 
                    FontSize="20" 
                    FontAttributes="Bold"/>
 
@@ -68,5 +65,17 @@
 
 
         </VerticalStackLayout>
+
     </ScrollView>
-</ContentPage>
+
+
+
+        <!--<StackLayout Grid.Row="1" VerticalOptions="End">
+            <Button BorderColor="black" Command="{Binding ChangePlanViewCommand}" Text="Plan tygodniowy" LineBreakMode="CharacterWrap" MinimumHeightRequest="50"
+                    FontSize="10" HorizontalOptions="End" WidthRequest="60" Padding="0" BorderWidth="1" Margin="20"
+                    TextColor="Black" Background="White"/>
+
+        </StackLayout>-->
+
+    </Grid>
+</ContentView>
