--- a/Views/TrainingPlanPage.xaml
+++ b/Views/TrainingPlanPage.xaml
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WorkoutDiary.Views.TrainingPlanPage"
-             xmlns:viewodel="clr-namespace:WorkoutDiary.ViewModels"
-             Title="Plan treningowy" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundColor="#E5E5E5">
+             xmlns:viewodel="clr-namespace:WorkoutDiary.ViewModels" >
 
 
 
-    <ContentPage.ToolbarItems >
-        <ToolbarItem Text="Add" Command="{Binding NewPlan}" IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
-    </ContentPage.ToolbarItems>
+
+
+
+
     <Grid RowDefinitions="auto,*,auto">
-
 
         <ScrollView Margin="5" Grid.Row="1" VerticalOptions="Start">
 
@@ -19,12 +18,12 @@
 
 
                 <CollectionView x:Name="TrainingPlanCollectionView"
-                         ItemsSource="{Binding TrainingPlan}"
-                        Margin="20"
-                        SelectionMode="Single"
-                        
-                        SelectionChangedCommand="{Binding SelectPlan}"
-                        SelectionChangedCommandParameter="{Binding Source={RelativeSource Self}, Path=SelectedItem}">
+                ItemsSource="{Binding TrainingPlan}"
+                Margin="20"
+                SelectionMode="Single"
+                SelectionChangedCommand="{Binding SelectPlan}"
+                SelectionChangedCommandParameter="{Binding Source={x:Reference TrainingPlanCollectionView}, Path=SelectedItem}">
+
                     <CollectionView.ItemsLayout>
 
                         <LinearItemsLayout Orientation="Vertical" />
@@ -59,12 +58,17 @@
                                         </VisualState>
                                     </VisualStateGroup>
                                 </VisualStateManager.VisualStateGroups>
-                                <Frame
-                                CornerRadius="10"
-                                BackgroundColor="White"
-                                Margin="5"
-                                HasShadow="True"
-                                InputTransparent="True">
+                                <Border
+                                            Stroke="Transparent"
+                                            Background="White"
+                                            StrokeThickness="0"
+                                            Margin="5"
+                                            Padding="15"
+                                            StrokeShape="RoundRectangle 10">
+
+                                    <Border.Shadow>
+                                        <Shadow Brush="Black" Opacity="0.1" Radius="10" Offset="0,1" />
+                                    </Border.Shadow>
 
 
 
@@ -91,7 +95,7 @@
                                             <ColumnDefinition Width="*" />
                                         </Grid.ColumnDefinitions>
 
-                                        <Button Grid.Row="0" Grid.Column="2" TextColor="{DynamicResource PrimaryColor}" 
+                                        <Button Grid.Row="0" Grid.Column="2" TextColor="{DynamicResource PrimaryColor}" ZIndex="999"
                                                 Text="X" Command="{Binding Source={RelativeSource AncestorType={x:Type CollectionView}},
                                             Path=BindingContext.Delete}" 
                                                 CommandParameter="{Binding .}" FontSize="12" HeightRequest="20"
@@ -164,7 +168,7 @@
 
                                     </Grid>
 
-                                </Frame>
+                                </Border>
                             </VerticalStackLayout>
                         </DataTemplate>
 
@@ -177,4 +181,4 @@
         </ScrollView>
     </Grid>
 
-</ContentPage>
+</ContentView>
